| Bug #33562 | Backup: no warning about disabled storage engine | ||
|---|---|---|---|
| Submitted: | 28 Dec 2007 23:41 | Modified: | 26 Feb 2008 2:27 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Backup | Severity: | S3 (Non-critical) |
| Version: | 6.0-alpha-debug | OS: | Linux (SUSE 10 64-bit) |
| Assigned to: | Chuck Bell | Target Version: | |
| Triage: | D4 (Minor) / R1 (None/Negligible) / E2 (Low) | ||
[28 Dec 2007 23:41]
Peter Gulutzan
[29 Dec 2007 5:24]
Miguel Solorzano
Thank you for the bug report. Verified as described.
[22 Jan 2008 18:30]
Chuck Bell
This is a problem in the logger class. The logger is not pushing the warnings and errors to the thread's (as in THD) error list. A patch for this will enable errors to be displayed at the client and to allow SHOW ERRORS and SHOW WARNINGS commands to function properly. Patch forthcoming.
[22 Jan 2008 18:30]
Chuck Bell
This is a problem in the logger class. The logger is not pushing the warnings and errors to the thread's (as in THD) error list. A patch for this will enable errors to be displayed at the client and to allow SHOW ERRORS and SHOW WARNINGS commands to function properly. Patch forthcoming.
[22 Jan 2008 18:30]
Chuck Bell
This is a problem in the logger class. The logger is not pushing the warnings and errors to the thread's (as in THD) error list. A patch for this will enable errors to be displayed at the client and to allow SHOW ERRORS and SHOW WARNINGS commands to function properly. Patch forthcoming.
[23 Jan 2008 18:59]
Chuck Bell
Patch submitted for review. See http://lists.mysql.com/commits/41166.
[5 Feb 2008 16:46]
Chuck Bell
New patch ready for review. See: http://lists.mysql.com/commits/41729
[7 Feb 2008 11:18]
Rafal Somla
Good to push.
[8 Feb 2008 19:24]
Chuck Bell
Patch queued.
[25 Feb 2008 20:19]
Bugs System
Pushed into 6.0.5-alpha
[26 Feb 2008 2:27]
Paul DuBois
Noted in 6.0.5 changelog. Warnings generated during a BACKUP DATABASE operation were not logged properly, and thus could not be displayed with a subsequent SHOW WARNINGS statement.
[14 Mar 2008 1:34]
Paul DuBois
Correction: No changelog entry needed; this bug did not appear in any released version.
