BUG#33562 : Backup: no warning about disabled storage engine

Added calls to save messages so that the SHOW ERRORS and
SHOW WARNINGS commands will present the errors and
warnings to the client properly.